build: Modify modules (#13)
Co-authored-by: unknowIfGuestInDream <liang.tang.cx@gmail.com>